<?xml version="1.0"?>
<package format="2">
  <name>robot_gui</name>
  <version>0.0.0</version>
  <description>The robot_gui package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>robotinfo_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>robotinfo_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>robotinfo_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_srvs</exec_depend>

</package>